qt/multimedia/gen_qmediaplaylist.nim


proc fcQMediaPlaylist_new(): ptr cQMediaPlaylist {.importc: "QMediaPlaylist_new".}
proc fcQMediaPlaylist_new2(parent: pointer): ptr cQMediaPlaylist {.importc: "QMediaPlaylist_new2".}
proc fcQMediaPlaylist_metaObject(self: pointer, ): pointer {.importc: "QMediaPlaylist_metaObject".}
proc fcQMediaPlaylist_metacast(self: pointer, param1: cstring): pointer {.importc: "QMediaPlaylist_metacast".}
proc fcQMediaPlaylist_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QMediaPlaylist_metacall".}
proc fcQMediaPlaylist_tr(s: cstring): struct_miqt_string {.importc: "QMediaPlaylist_tr".}
proc fcQMediaPlaylist_trUtf8(s: cstring): struct_miqt_string {.importc: "QMediaPlaylist_trUtf8".}
proc fcQMediaPlaylist_mediaObject(self: pointer, ): pointer {.importc: "QMediaPlaylist_mediaObject".}
proc fcQMediaPlaylist_playbackMode(self: pointer, ): cint {.importc: "QMediaPlaylist_playbackMode".}
proc fcQMediaPlaylist_setPlaybackMode(self: pointer, mode: cint): void {.importc: "QMediaPlaylist_setPlaybackMode".}
proc fcQMediaPlaylist_currentIndex(self: pointer, ): cint {.importc: "QMediaPlaylist_currentIndex".}
proc fcQMediaPlaylist_currentMedia(self: pointer, ): pointer {.importc: "QMediaPlaylist_currentMedia".}
proc fcQMediaPlaylist_nextIndex(self: pointer, ): cint {.importc: "QMediaPlaylist_nextIndex".}
proc fcQMediaPlaylist_previousIndex(self: pointer, ): cint {.importc: "QMediaPlaylist_previousIndex".}
proc fcQMediaPlaylist_media(self: pointer, index: cint): pointer {.importc: "QMediaPlaylist_media".}
proc fcQMediaPlaylist_mediaCount(self: pointer, ): cint {.importc: "QMediaPlaylist_mediaCount".}
proc fcQMediaPlaylist_isEmpty(self: pointer, ): bool {.importc: "QMediaPlaylist_isEmpty".}
proc fcQMediaPlaylist_isReadOnly(self: pointer, ): bool {.importc: "QMediaPlaylist_isReadOnly".}
proc fcQMediaPlaylist_addMedia(self: pointer, content: pointer): bool {.importc: "QMediaPlaylist_addMedia".}
proc fcQMediaPlaylist_addMediaWithItems(self: pointer, items: struct_miqt_array): bool {.importc: "QMediaPlaylist_addMediaWithItems".}
proc fcQMediaPlaylist_insertMedia(self: pointer, index: cint, content: pointer): bool {.importc: "QMediaPlaylist_insertMedia".}
proc fcQMediaPlaylist_insertMedia2(self: pointer, index: cint, items: struct_miqt_array): bool {.importc: "QMediaPlaylist_insertMedia2".}
proc fcQMediaPlaylist_moveMedia(self: pointer, fromVal: cint, to: cint): bool {.importc: "QMediaPlaylist_moveMedia".}
proc fcQMediaPlaylist_removeMedia(self: pointer, pos: cint): bool {.importc: "QMediaPlaylist_removeMedia".}
proc fcQMediaPlaylist_removeMedia2(self: pointer, start: cint, endVal: cint): bool {.importc: "QMediaPlaylist_removeMedia2".}
proc fcQMediaPlaylist_clear(self: pointer, ): bool {.importc: "QMediaPlaylist_clear".}
proc fcQMediaPlaylist_load(self: pointer, request: pointer): void {.importc: "QMediaPlaylist_load".}
proc fcQMediaPlaylist_loadWithLocation(self: pointer, location: pointer): void {.importc: "QMediaPlaylist_loadWithLocation".}
proc fcQMediaPlaylist_loadWithDevice(self: pointer, device: pointer): void {.importc: "QMediaPlaylist_loadWithDevice".}
proc fcQMediaPlaylist_save(self: pointer, location: pointer): bool {.importc: "QMediaPlaylist_save".}
proc fcQMediaPlaylist_save2(self: pointer, device: pointer, format: cstring): bool {.importc: "QMediaPlaylist_save2".}
proc fcQMediaPlaylist_error(self: pointer, ): cint {.importc: "QMediaPlaylist_error".}
proc fcQMediaPlaylist_errorString(self: pointer, ): struct_miqt_string {.importc: "QMediaPlaylist_errorString".}
proc fcQMediaPlaylist_shuffle(self: pointer, ): void {.importc: "QMediaPlaylist_shuffle".}
proc fcQMediaPlaylist_next(self: pointer, ): void {.importc: "QMediaPlaylist_next".}
proc fcQMediaPlaylist_previous(self: pointer, ): void {.importc: "QMediaPlaylist_previous".}
proc fcQMediaPlaylist_setCurrentIndex(self: pointer, index: cint): void {.importc: "QMediaPlaylist_setCurrentIndex".}
proc fcQMediaPlaylist_currentIndexChanged(self: pointer, index: cint): void {.importc: "QMediaPlaylist_currentIndexChanged".}
proc fQMediaPlaylist_connect_currentIndexChanged(self: pointer, slot: int) {.importc: "QMediaPlaylist_connect_currentIndexChanged".}
proc fcQMediaPlaylist_playbackModeChanged(self: pointer, mode: cint): void {.importc: "QMediaPlaylist_playbackModeChanged".}
proc fQMediaPlaylist_connect_playbackModeChanged(self: pointer, slot: int) {.importc: "QMediaPlaylist_connect_playbackModeChanged".}
proc fcQMediaPlaylist_currentMediaChanged(self: pointer, param1: pointer): void {.importc: "QMediaPlaylist_currentMediaChanged".}
proc fQMediaPlaylist_connect_currentMediaChanged(self: pointer, slot: int) {.importc: "QMediaPlaylist_connect_currentMediaChanged".}
proc fcQMediaPlaylist_mediaAboutToBeInserted(self: pointer, start: cint, endVal: cint): void {.importc: "QMediaPlaylist_mediaAboutToBeInserted".}
proc fQMediaPlaylist_connect_mediaAboutToBeInserted(self: pointer, slot: int) {.importc: "QMediaPlaylist_connect_mediaAboutToBeInserted".}
proc fcQMediaPlaylist_mediaInserted(self: pointer, start: cint, endVal: cint): void {.importc: "QMediaPlaylist_mediaInserted".}
proc fQMediaPlaylist_connect_mediaInserted(self: pointer, slot: int) {.importc: "QMediaPlaylist_connect_mediaInserted".}
proc fcQMediaPlaylist_mediaAboutToBeRemoved(self: pointer, start: cint, endVal: cint): void {.importc: "QMediaPlaylist_mediaAboutToBeRemoved".}
proc fQMediaPlaylist_connect_mediaAboutToBeRemoved(self: pointer, slot: int) {.importc: "QMediaPlaylist_connect_mediaAboutToBeRemoved".}
proc fcQMediaPlaylist_mediaRemoved(self: pointer, start: cint, endVal: cint): void {.importc: "QMediaPlaylist_mediaRemoved".}
proc fQMediaPlaylist_connect_mediaRemoved(self: pointer, slot: int) {.importc: "QMediaPlaylist_connect_mediaRemoved".}
proc fcQMediaPlaylist_mediaChanged(self: pointer, start: cint, endVal: cint): void {.importc: "QMediaPlaylist_mediaChanged".}
proc fQMediaPlaylist_connect_mediaChanged(self: pointer, slot: int) {.importc: "QMediaPlaylist_connect_mediaChanged".}
proc fcQMediaPlaylist_loaded(self: pointer, ): void {.importc: "QMediaPlaylist_loaded".}
proc fQMediaPlaylist_connect_loaded(self: pointer, slot: int) {.importc: "QMediaPlaylist_connect_loaded".}
proc fcQMediaPlaylist_loadFailed(self: pointer, ): void {.importc: "QMediaPlaylist_loadFailed".}
proc fQMediaPlaylist_connect_loadFailed(self: pointer, slot: int) {.importc: "QMediaPlaylist_connect_loadFailed".}
proc fcQMediaPlaylist_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QMediaPlaylist_tr2".}
proc fcQMediaPlaylist_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QMediaPlaylist_tr3".}
proc fcQMediaPlaylist_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QMediaPlaylist_trUtf82".}
proc fcQMediaPlaylist_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QMediaPlaylist_trUtf83".}
proc fcQMediaPlaylist_nextIndex1(self: pointer, steps: cint): cint {.importc: "QMediaPlaylist_nextIndex1".}
proc fcQMediaPlaylist_previousIndex1(self: pointer, steps: cint): cint {.importc: "QMediaPlaylist_previousIndex1".}
proc fcQMediaPlaylist_load2(self: pointer, request: pointer, format: cstring): void {.importc: "QMediaPlaylist_load2".}
proc fcQMediaPlaylist_load22(self: pointer, location: pointer, format: cstring): void {.importc: "QMediaPlaylist_load22".}
proc fcQMediaPlaylist_load23(self: pointer, device: pointer, format: cstring): void {.importc: "QMediaPlaylist_load23".}
proc fcQMediaPlaylist_save22(self: pointer, location: pointer, format: cstring): bool {.importc: "QMediaPlaylist_save22".}
proc fQMediaPlaylist_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QMediaPlaylist_virtualbase_metacall".}
proc fcQMediaPlaylist_override_virtual_metacall(self: pointer, slot: int) {.importc: "QMediaPlaylist_override_virtual_metacall".}
proc fQMediaPlaylist_virtualbase_mediaObject(self: pointer, ): pointer{.importc: "QMediaPlaylist_virtualbase_mediaObject".}
proc fcQMediaPlaylist_override_virtual_mediaObject(self: pointer, slot: int) {.importc: "QMediaPlaylist_override_virtual_mediaObject".}
proc fQMediaPlaylist_virtualbase_setMediaObject(self: pointer, objectVal: pointer): bool{.importc: "QMediaPlaylist_virtualbase_setMediaObject".}
proc fcQMediaPlaylist_override_virtual_setMediaObject(self: pointer, slot: int) {.importc: "QMediaPlaylist_override_virtual_setMediaObject".}
proc fQMediaPlaylist_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QMediaPlaylist_virtualbase_event".}
proc fcQMediaPlaylist_override_virtual_event(self: pointer, slot: int) {.importc: "QMediaPlaylist_override_virtual_event".}
proc fQMediaPlaylist_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QMediaPlaylist_virtualbase_eventFilter".}
proc fcQMediaPlaylist_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QMediaPlaylist_override_virtual_eventFilter".}
proc fQMediaPlaylist_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QMediaPlaylist_virtualbase_timerEvent".}
proc fcQMediaPlaylist_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QMediaPlaylist_override_virtual_timerEvent".}
proc fQMediaPlaylist_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QMediaPlaylist_virtualbase_childEvent".}
proc fcQMediaPlaylist_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QMediaPlaylist_override_virtual_childEvent".}
proc fQMediaPlaylist_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QMediaPlaylist_virtualbase_customEvent".}
proc fcQMediaPlaylist_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QMediaPlaylist_override_virtual_customEvent".}
proc fQMediaPlaylist_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QMediaPlaylist_virtualbase_connectNotify".}
proc fcQMediaPlaylist_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QMediaPlaylist_override_virtual_connectNotify".}
proc fQMediaPlaylist_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QMediaPlaylist_virtualbase_disconnectNotify".}
proc fcQMediaPlaylist_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QMediaPlaylist_override_virtual_disconnectNotify".}
proc fcQMediaPlaylist_staticMetaObject(): pointer {.importc: "QMediaPlaylist_staticMetaObject".}
proc fcQMediaPlaylist_delete(self: pointer) {.importc: "QMediaPlaylist_delete".}


func init*(T: type QMediaPlaylist, h: ptr cQMediaPlaylist): QMediaPlaylist =
  T(h: h)
proc create*(T: type QMediaPlaylist, ): QMediaPlaylist =

  QMediaPlaylist.init(fcQMediaPlaylist_new())
proc create*(T: type QMediaPlaylist, parent: gen_qobject.QObject): QMediaPlaylist =

  QMediaPlaylist.init(fcQMediaPlaylist_new2(parent.h))
proc metaObject*(self: QMediaPlaylist, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQMediaPlaylist_metaObject(self.h))

proc metacast*(self: QMediaPlaylist, param1: cstring): pointer =

  fcQMediaPlaylist_metacast(self.h, param1)

proc metacall*(self: QMediaPlaylist, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQMediaPlaylist_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QMediaPlaylist, s: cstring): string =

  let v_ms = fcQMediaPlaylist_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QMediaPlaylist, s: cstring): string =

  let v_ms = fcQMediaPlaylist_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc mediaObject*(self: QMediaPlaylist, ): gen_qmediaobject.QMediaObject =

  gen_qmediaobject.QMediaObject(h: fcQMediaPlaylist_mediaObject(self.h))

proc playbackMode*(self: QMediaPlaylist, ): QMediaPlaylistPlaybackMode =

  QMediaPlaylistPlaybackMode(fcQMediaPlaylist_playbackMode(self.h))
